# e-vde

./: CMakeLists.txt  README.md
doc/: report.md
include/: args.h  control_plane.h  data_plane.h  flow_table.h  fw_engine.h  hash_table.h  logging.h  memory.h  message.h  packet.h  polling.h  port.h  ring.h  switch.h  thread_pool.h  toeplitz.h  utils.h
src/: main.c
src/config/: json.c  opts.c
src/control_plane/: control_plane.c  hash_table.c
src/data_plane/: data_plane.c  flow_table.c  forwarding_engine.c  packet_processing.c  toeplitz.c
src/io/: fd_manager.c  polling.c  port.c  port_manager.c
src/message/: message.c
src/utils/: logging.c  memory_mgmt.c  queue.c  sockutils.c  thread_pool.c
